Spoilers; two papers added.

--- a/index.html
+++ b/index.html
@@ -127,26 +127,58 @@ ga('require', 'pageVisibilityTracker');
   <h1>Publications</h1>
   <hr>
   <h3>Please cite the following paper, if you use supercell program:</h3>
-  <div class="row">  
+  <div class="row">
     <div class="text-center col-lg-1 col-sm-2 col-md-2 col-xs-3">
       <div data-badge-popover="right" data-doi='10.1186/s13321-016-0129-3' class="altmetric-embed"></div>
     </div>
-    <div class="text-left col-lg-11 col-sm-10 col-md-10 col-xs-9">    
+    <div class="text-left col-lg-11 col-sm-10 col-md-10 col-xs-9">
        <p>Okhotnikov, K., Charpentier, T., & Cadars, S. (2016). Supercell program: a combinatorial structure-generation approach for the local-level modeling of atomic substitutions and partial occupancies in crystals. Journal of Cheminformatics, 8(1), 17. <a href="http://doi.org/10.1186/s13321-016-0129-3"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></p>
     </div>
-  </div>  
+  </div>
   <h3>Papers which use/cite supercell program:</h3>
-  <ul class="list-papers">
-    <li>Salager, E., Sarou-Kanian, V., Sathiya, M., Tang, M., Leriche, J.-B., Melin, P., … Tarascon, J.-M. (2014). Solid-State NMR of the Family of Positive Electrode Materials <span style="white-space: nowrap;">Li<sub>2</sub>Ru<sub>1-y</sub>Sn<sub>y</sub>O<sub>3</sub></span> for Lithium-Ion Batteries. Chemistry of Materials, 26(24), 7009–7019. <a href="http://doi.org/10.1021/cm503280s"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-    <li>Okhotnikov, K. (2016). Comment on “Symmetry and random sampling of symmetry independent configurations for the simulation of disordered solids”, <a href="http://arxiv.org/abs/1606.08062"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-    <li>Fischer, M., & Angel, R. J. (2017). Accurate structures and energetics of neutral-framework zeotypes from dispersion-corrected DFT calculations. The Journal of Chemical Physics, 146(17), 174111. <a href="http://doi.org/10.1063/1.4981528"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-    <li>Cadars, S., Ahn, N. H., Okhotnikov, K., Shin, J., Vicente, A., Hong, S. B., & Fernandez, C. (2017). Modeling short-range substitution order and disorder in crystals: Application to the Ga/Si distribution in a natrolite zeolite. Solid State Nuclear Magnetic Resonance, 84, 182–195. <a href="http://doi.org/10.1016/j.ssnmr.2017.04.001"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a>, <a href="https://github.com/orex/supercell/tree/master/data/examples/Rb-PST-1"><i class="fa fa-file-code-o" aria-hidden="true"></i> View Example</a></li>  
-    <li>Hong, S. U., Singh, S. P., Pyo, M., Park, W. B., & Sohn, K.-S. (2017). Density functional theory calculations for the band gap and formation energy of Pr<sub>4−x</sub>Ca<sub>x</sub>Si<sub>12</sub>O<sub>3+x</sub>N<sub>18−x</sub>; a highly disordered compound with low symmetry and a large cell size. Phys. Chem. Chem. Phys., 19(25), 16702–16712. <a href="http://doi.org/10.1039/C7CP03247A"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-    <li>Kim, J. (2017). The Role of Auxiliary Alkali Metal Ions on Scheelite Structure Double Molybdate and Tungstate Phosphors. Inorganic Chemistry, 56(14), 8078–8086. <a href="http://doi.org/10.1021/acs.inorgchem.7b00804"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-    <li>Sharma, R. & Maharjan S. (2017). First Principle Calculation of Lattice Constants for Generalised Quasirandom Structures of Ingan Alloy, IJSR, 6(6) 1817, <a href="http://doi.org/10.21275/ART20174558"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-    <li>M. Dieb, T., Ju, S., Yoshizoe, K., Hou, Z., Shiomi, J., & Tsuda, K. (2017). MDTS: automatic complex materials design using Monte Carlo tree search. Science and Technology of Advanced Materials, 18(1), 498–503. <a href="http://doi.org/10.1080/14686996.2017.1344083"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li> 
-    <li>Fernandez-Carrion, A. J., Al Saghir, K., Veron, E., Becerro, A. I., Porcher, F., Wisniewski, W., … Allix, M. (2017). Local Disorder and Tunable Luminescence in Sr<sub>1–x/2</sub>Al<sub>2–x</sub>Si<sub>x</sub>O<sub>4</sub> (0.2 ≤ x ≤ 0.5) Transparent Ceramics. Inorganic Chemistry, 4(ii), acs.inorgchem.7b01881. <a href="http://doi.org/10.1021/acs.inorgchem.7b01881"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li> 
-  </ul>
+  <div class="panel-group">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" href="#collapse2017">
+            <h4><i class="fa fa-plus-square-o fa-fw"></i>2017 and earlier...<span class="badge badge-success pull-right">9</span></h4>
+          </a>
+        </h4>
+      </div>
+      <div id="collapse2017" class="panel-collapse collapse">
+        <div class="panel-body">
+          <ul class="list-papers">
+            <li>Salager, E., Sarou-Kanian, V., Sathiya, M., Tang, M., Leriche, J.-B., Melin, P., … Tarascon, J.-M. (2014). Solid-State NMR of the Family of Positive Electrode Materials <span style="white-space: nowrap;">Li<sub>2</sub>Ru<sub>1-y</sub>Sn<sub>y</sub>O<sub>3</sub></span> for Lithium-Ion Batteries. Chemistry of Materials, 26(24), 7009–7019. <a href="http://doi.org/10.1021/cm503280s"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Okhotnikov, K. (2016). Comment on “Symmetry and random sampling of symmetry independent configurations for the simulation of disordered solids”, <a href="http://arxiv.org/abs/1606.08062"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Fischer, M., & Angel, R. J. (2017). Accurate structures and energetics of neutral-framework zeotypes from dispersion-corrected DFT calculations. The Journal of Chemical Physics, 146(17), 174111. <a href="http://doi.org/10.1063/1.4981528"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Cadars, S., Ahn, N. H., Okhotnikov, K., Shin, J., Vicente, A., Hong, S. B., & Fernandez, C. (2017). Modeling short-range substitution order and disorder in crystals: Application to the Ga/Si distribution in a natrolite zeolite. Solid State Nuclear Magnetic Resonance, 84, 182–195. <a href="http://doi.org/10.1016/j.ssnmr.2017.04.001"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a>, <a href="https://github.com/orex/supercell/tree/master/data/examples/Rb-PST-1"><i class="fa fa-file-code-o" aria-hidden="true"></i> View Example</a></li>
+            <li>Hong, S. U., Singh, S. P., Pyo, M., Park, W. B., & Sohn, K.-S. (2017). Density functional theory calculations for the band gap and formation energy of Pr<sub>4−x</sub>Ca<sub>x</sub>Si<sub>12</sub>O<sub>3+x</sub>N<sub>18−x</sub>; a highly disordered compound with low symmetry and a large cell size. Phys. Chem. Chem. Phys., 19(25), 16702–16712. <a href="http://doi.org/10.1039/C7CP03247A"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Kim, J. (2017). The Role of Auxiliary Alkali Metal Ions on Scheelite Structure Double Molybdate and Tungstate Phosphors. Inorganic Chemistry, 56(14), 8078–8086. <a href="http://doi.org/10.1021/acs.inorgchem.7b00804"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Sharma, R. & Maharjan S. (2017). First Principle Calculation of Lattice Constants for Generalised Quasirandom Structures of Ingan Alloy, IJSR, 6(6) 1817, <a href="http://doi.org/10.21275/ART20174558"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>M. Dieb, T., Ju, S., Yoshizoe, K., Hou, Z., Shiomi, J., & Tsuda, K. (2017). MDTS: automatic complex materials design using Monte Carlo tree search. Science and Technology of Advanced Materials, 18(1), 498–503. <a href="http://doi.org/10.1080/14686996.2017.1344083"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Fernandez-Carrion, A. J., Al Saghir, K., Veron, E., Becerro, A. I., Porcher, F., Wisniewski, W., … Allix, M. (2017). Local Disorder and Tunable Luminescence in Sr<sub>1–x/2</sub>Al<sub>2–x</sub>Si<sub>x</sub>O<sub>4</sub> (0.2 ≤ x ≤ 0.5) Transparent Ceramics. Inorganic Chemistry, 4(ii), acs.inorgchem.7b01881. <a href="http://doi.org/10.1021/acs.inorgchem.7b01881"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" href="#collapse2018">
+            <h4><i class="fa fa-plus-square-o fa-fw"></i>2018<span class="badge badge-success pull-right">2</span></h4>
+          </a>
+        </h4>
+      </div>
+      <div id="collapse2018" class="panel-collapse collapse">
+        <div class="panel-body">
+          <ul class="list-papers">
+            <li>Rakhmatullin, A., Boča, M., Mlynáriková, J., Hadzimová, E., Vasková, Z., Polovov, I. B., & Mičušík, M. (2018). Solid state NMR and XPS of ternary fluorido-zirconates of various coordination modes. Journal of Fluorine Chemistry. <a href="http://doi.org/10.1016/j.jfluchem.2018.01.010"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Sicolo, S., Kalcher, C., Sedlmaier, S. J., Janek, J., & Albe, K. (2018). Diffusion mechanism in the superionic conductor Li<sub>4</sub>PS<sub>4</sub>I studied by first-principles calculations. Solid State Ionics, 319, 83–91. <a href="http://doi.org/10.1016/j.ssi.2018.01.046"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 <br>
 <div id="download" class="container">
