--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@ ga('require', 'pageVisibilityTracker');
   </div>
   <div class="row">
     <div class="text-center col-sm-3">
-       <a class="btn btn-outline btn-lg" href="doc/supercell_tutorial.pdf" role="button"> <img src="images/PDF-32x32.png"> PDF</a></div>
+       <a class="btn btn-outline btn-lg" href="doc/supercell_tutorial.pdf" role="button"> <img src="images/PDF-32x32.png" alt="PDF"> PDF</a></div>
     <div class="text-center col-sm-3">
-      <a class="btn btn-outline btn-lg" href="https://jcheminf.springeropen.com/articles/10.1186/s13321-016-0129-3" role="button"> <img src="images/www-24x24.png"> Read article</a></div>
+      <a class="btn btn-outline btn-lg" href="https://jcheminf.springeropen.com/articles/10.1186/s13321-016-0129-3" role="button"> <img src="images/www-24x24.png" alt="link"> Read article</a></div>
     <div class="text-center col-sm-3">
-      <a class="btn btn-outline btn-lg" href="doc/supercell_man.html" role="button"> <img src="images/text_html_32x32.png"> HTML</a>
-      <a class="btn btn-outline btn-lg" href="doc/supercell_man.pdf" role="button"> <img src="images/PDF-32x32.png"> PDF</a>
+      <a class="btn btn-outline btn-lg" href="doc/supercell_man.html" role="button"> <img src="images/text_html_32x32.png" alt="HTML"> HTML</a>
+      <a class="btn btn-outline btn-lg" href="doc/supercell_man.pdf" role="button"> <img src="images/PDF-32x32.png" alt="PDF"> PDF</a>
       </div>
     <div class="text-center col-sm-3">
-       <a class="btn btn-outline btn-lg" href="https://github.com/orex/supercell/tree/master/data/examples" role="button"><img src="images/www-24x24.png"> Examples</a></div>
+       <a class="btn btn-outline btn-lg" href="https://github.com/orex/supercell/tree/master/data/examples" role="button"><img src="images/www-24x24.png" alt="link"> Examples</a></div>
   <hr> 
   </div>
 </div>  
@@ -139,11 +139,9 @@ ga('require', 'pageVisibilityTracker');
   <div class="panel-group">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h4 class="panel-title">
-          <a data-toggle="collapse" href="#collapse2017">
-            <h4><i class="fa fa-plus-square-o fa-fw"></i>2017 and earlier...<span class="badge badge-success pull-right">9</span></h4>
-          </a>
-        </h4>
+        <a data-toggle="collapse" href="#collapse2017">
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2017 and earlier...<span class="badge badge-success pull-right">9</span></h4>
+        </a>
       </div>
       <div id="collapse2017" class="panel-collapse collapse">
         <div class="panel-body">
@@ -163,11 +161,9 @@ ga('require', 'pageVisibilityTracker');
     </div>
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h4 class="panel-title">
-          <a data-toggle="collapse" href="#collapse2018">
-            <h4><i class="fa fa-plus-square-o fa-fw"></i>2018<span class="badge badge-success pull-right">2</span></h4>
-          </a>
-        </h4>
+        <a data-toggle="collapse" href="#collapse2018">
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2018<span class="badge badge-success pull-right">2</span></h4>
+        </a>
       </div>
       <div id="collapse2018" class="panel-collapse collapse">
         <div class="panel-body">
@@ -196,11 +192,11 @@ ga('require', 'pageVisibilityTracker');
   </div>
   <div class="row">
     <div class="text-center col-sm-6">
-       <a class="btn btn-outline btn-lg" href="exe/supercell-linux.tar.gz" role="button"> <img src="images/Linux64x64.png"> <br>Linux 64bit</a>
-       <a class="btn btn-outline btn-lg" href="exe/supercell-osx.tar.gz" role="button"> <img src="images/mac64x64.png"> <br>OSX</a>
+       <a class="btn btn-outline btn-lg" href="exe/supercell-linux.tar.gz" role="button"> <img src="images/Linux64x64.png" alt="Linux"> <br>Linux 64bit</a>
+       <a class="btn btn-outline btn-lg" href="exe/supercell-osx.tar.gz" role="button"> <img src="images/mac64x64.png" alt="MacOS"> <br>OSX</a>
     </div>
     <div class="text-center col-sm-6">
-      <a class="btn btn-outline btn-lg" href="https://github.com/orex/supercell" role="button"> <img src="images/github64x64.png"><br>GitHub</a></div>
+      <a class="btn btn-outline btn-lg" href="https://github.com/orex/supercell" role="button"> <img src="images/github64x64.png" alt="source code"><br>GitHub</a></div>
   <hr> 
   </div>
 </div>
@@ -264,7 +260,7 @@ ga('require', 'pageVisibilityTracker');
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>Copyright © Kirill Okhotnikov. All rights reserved. 2017</p>
+        <p>Copyright © Kirill Okhotnikov. All rights reserved. 2018</p>
       </div>
     </div>
   </div>
@@ -273,6 +269,6 @@ ga('require', 'pageVisibilityTracker');
 <script src="js/jquery-1.11.3.min.js"></script> 
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
 <script src="js/bootstrap.js"></script>
-<script type='text/javascript' src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js'></script>
+<script src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js'></script>
 </body>
 </html>
