--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2018">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2018<span class="badge badge-success pull-right">4</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2018<span class="badge badge-success pull-right">5</span></h4>
         </a>
       </div>
       <div id="collapse2018" class="panel-collapse collapse">
@@ -172,6 +172,7 @@ ga('require', 'pageVisibilityTracker');
             <li>Sicolo, S., Kalcher, C., Sedlmaier, S. J., Janek, J., & Albe, K. (2018). Diffusion mechanism in the superionic conductor Li<sub>4</sub>PS<sub>4</sub>I studied by first-principles calculations. Solid State Ionics, 319, 83–91. <a href="http://doi.org/10.1016/j.ssi.2018.01.046"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>M. Dieb, T., Hou, Z., & Tsuda, K. (2018). Structure prediction of boron-doped graphene by machine learning. The Journal of Chemical Physics, 148(24), 241716. <a href="http://doi.org/10.1063/1.5018065"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>          
             <li>Juarez-Perez, E. J., Ono, L. K., Maeda, M., Jiang, Y., Hawash, Z., & Qi, Y. (2018). Photo-, Thermal-decomposition in Methylammonium Halide Lead Perovskites and inferred design principles to increase photovoltaic device stability. Journal of Materials Chemistry A. <a href="http://doi.org/10.1039/C8TA03501F"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Kim, J., Tahara, D., Miura, Y., & Kim, B. G. (2018). First-principle calculations of electronic structures and polar properties of (&kappa;, &epsilon;)-Ga<sub>2</sub>O<sub>3</sub>. Applied Physics Express, 11(6), 061101. <a href="http://doi.org/10.7567/APEX.11.061101"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
 	  </ul>
         </div>
       </div>
