Citations badge added.

--- a/index.html
+++ b/index.html
@@ -128,10 +128,13 @@ ga('require', 'pageVisibilityTracker');
   <hr>
   <h3>Please cite the following paper, if you use supercell program:</h3>
   <div class="row">
-    <div class="text-center col-lg-1 col-sm-2 col-md-2 col-xs-3">
-      <div data-badge-popover="right" data-doi='10.1186/s13321-016-0129-3' class="altmetric-embed"></div>
+    <div class="text-center col-lg-1 col-sm-2 col-md-1 col-xs-3">
+      <span class="__dimensions_badge_embed__" data-doi="10.1186/s13321-016-0129-3" data-style="small_circle"></span>
     </div>
-    <div class="text-left col-lg-11 col-sm-10 col-md-10 col-xs-9">
+    <div class="text-center col-lg-1 col-sm-2 col-md-1 col-xs-3">
+      <div data-badge-popover="right" data-doi='10.1186/s13321-016-0129-3' data-badge-type="donut" class="altmetric-embed"></div>
+    </div>
+    <div class="text-left col-lg-10 col-sm-8 col-md-10 col-xs-6">
        <p>Okhotnikov, K., Charpentier, T., & Cadars, S. (2016). Supercell program: a combinatorial structure-generation approach for the local-level modeling of atomic substitutions and partial occupancies in crystals. Journal of Cheminformatics, 8(1), 17. <a href="http://doi.org/10.1186/s13321-016-0129-3"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></p>
     </div>
   </div>
@@ -271,5 +274,6 @@ ga('require', 'pageVisibilityTracker');
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
 <script src="js/bootstrap.js"></script>
 <script src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js'></script>
+<script async src="https://badge.dimensions.ai/badge.js" charset="utf-8"></script>
 </body>
 </html>
