--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2018">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2018<span class="badge badge-success pull-right">6</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2018<span class="badge badge-success pull-right">7</span></h4>
         </a>
       </div>
       <div id="collapse2018" class="panel-collapse collapse">
@@ -177,6 +177,7 @@ ga('require', 'pageVisibilityTracker');
             <li>Juarez-Perez, E. J., Ono, L. K., Maeda, M., Jiang, Y., Hawash, Z., & Qi, Y. (2018). Photo-, Thermal-decomposition in Methylammonium Halide Lead Perovskites and inferred design principles to increase photovoltaic device stability. Journal of Materials Chemistry A. <a href="http://doi.org/10.1039/C8TA03501F"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Kim, J., Tahara, D., Miura, Y., & Kim, B. G. (2018). First-principle calculations of electronic structures and polar properties of (&kappa;, &epsilon;)-Ga<sub>2</sub>O<sub>3</sub>. Applied Physics Express, 11(6), 061101. <a href="http://doi.org/10.7567/APEX.11.061101"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Onuma, T., Ono, M., Ishii, K., Kaneko, K., Yamaguchi, T., Fujita, S., & Honda, T. (2018). Impact of local arrangement of Mg and Zn atoms in rocksalt-structured Mg<sub>x</sub>Zn<sub>1−x</sub>O alloys on bandgap and deep UV cathodoluminescence peak energies. Applied Physics Letters, 113(6), 061903. <a href="http://doi.org/10.1063/1.5031174"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Lotfi, S., Oliynyk, A. O., & Brgoch, J. (2018). Polyanionic Gold–Tin Bonding and Crystal Structure Preference in REAu<sub>1.5</sub>Sn<sub>0.5</sub> (RE = La, Ce, Pr, Nd). Inorganic Chemistry, 5, acs.inorgchem.8b01356. <a href="http://doi.org/10.1021/acs.inorgchem.8b01356"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
 	  </ul>
         </div>
       </div>
