--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2018">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2018<span class="badge badge-success pull-right">9</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2018<span class="badge badge-success pull-right">10</span></h4>
         </a>
       </div>
       <div id="collapse2018" class="panel-collapse collapse">
@@ -180,6 +180,7 @@ ga('require', 'pageVisibilityTracker');
             <li>Lotfi, S., Oliynyk, A. O., & Brgoch, J. (2018). Polyanionic Gold–Tin Bonding and Crystal Structure Preference in REAu<sub>1.5</sub>Sn<sub>0.5</sub> (RE = La, Ce, Pr, Nd). Inorganic Chemistry, 57(17), 10736–10743. <a href="http://doi.org/10.1021/acs.inorgchem.8b01356"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Hoedl, M. F., Makagon, E., Lubomirsky, I., Merkle, R., Kotomin, E. A., & Maier, J. (2018). Impact of point defects on the elastic properties of BaZrO<sub>3</sub>: Comprehensive insight from experiments and ab initio calculations. Acta Materialia, 160, 247–256. <a href="http://doi.org/10.1016/j.actamat.2018.08.042"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Han, U., Park, W. B., Singh, S. P., Pyo, M., & Sohn, K.-S. (2018). Determination of Possible Configurations for Li<sub>0.5</sub>CoO<sub>2</sub> a Delithiated Li-Ion Battery Cathodes via DFT Calculation Coupled with a Multi-Objective Non-Dominated Sorting Genetic Algorithm (NSGA-III). Physical Chemistry Chemical Physics. <a href="http://doi.org/10.1039/C8CP05284K"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Loh, J. Y. Y., & Kherani, N. P. (2018). Photodegradation Activity of Sputtered Indium Oxide and Suboxide Thin Films on Rhodamine-B Dye. The Journal of Physical Chemistry C, acs.jpcc.8b07126. <a href="http://doi.org/10.1021/acs.jpcc.8b07126"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
 	  </ul>
         </div>
       </div>
