--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2018">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2018<span class="badge badge-success pull-right">11</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2018<span class="badge badge-success pull-right">12</span></h4>
         </a>
       </div>
       <div id="collapse2018" class="panel-collapse collapse">
@@ -182,6 +182,7 @@ ga('require', 'pageVisibilityTracker');
             <li>Han, U., Park, W. B., Singh, S. P., Pyo, M., & Sohn, K.-S. (2018). Determination of Possible Configurations for Li<sub>0.5</sub>CoO<sub>2</sub> a Delithiated Li-Ion Battery Cathodes via DFT Calculation Coupled with a Multi-Objective Non-Dominated Sorting Genetic Algorithm (NSGA-III). Physical Chemistry Chemical Physics. <a href="http://doi.org/10.1039/C8CP05284K"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Loh, J. Y. Y., & Kherani, N. P. (2018). Photodegradation Activity of Sputtered Indium Oxide and Suboxide Thin Films on Rhodamine-B Dye. The Journal of Physical Chemistry C, acs.jpcc.8b07126. <a href="http://doi.org/10.1021/acs.jpcc.8b07126"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Naveen, N., Park, W. B., Singh, S. P., Han, S. C., Ahn, D., Sohn, K.-S., & Pyo, M. (2018). KCrS<sub>2</sub> Cathode with Considerable Cyclability and High Rate Performance: The First K + Stoichiometric Layered Compound for Potassium-Ion Batteries. Small, 1803495. <a href="http://doi.org/10.1002/smll.201803495"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Kim, N., Perry, N. H., & Ertekin, E. (2018). Atomic Modeling and Electronic Structure of Mixed Ionic-Electronic Conductor SrTi 1−x Fe x O 3−x/2+δ Considered as a Mixture of SrTiO 3 and Sr 2 Fe 2 O 5. Chemistry of Materials, acs.chemmater.8b04284. <a href="http://doi.org/10.1021/acs.chemmater.8b04284"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
 	  </ul>
         </div>
       </div>
