--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@ ga('require', 'pageVisibilityTracker');
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#introduction">Introduction <span class="sr-only">(current)</span></a> </li>
+        <li class="active"><a href="#news">News</a> </li>
+        <li><a href="#introduction">Introduction</span></a> </li>
         <li><a href="#read-more">Getting Started</a> </li>
         <li><a href="#download">Download</a> </li>
         <li><a href="#publications">Publications</a> </li>
@@ -75,6 +76,22 @@ ga('require', 'pageVisibilityTracker');
     </div>
   </div>
 </div>
+
+<div id="news" class="container">
+  <h1>News</h1>
+  <hr>
+  <div class="row">
+    <div class="text-right col-xs-4 col-sm-3 col-md-2 col-xl-1">
+    <h4><b>24-01-2019</b></h4>
+    </div>
+    <div class="text-left col-xs-8 col-sm-9 col-md-10 col-xl-11">
+    <h4> Supercell v1.1: A maximum limit for processing structures has been increased.</h4> <p>The new version of <i>supercell</i> program can process up to 10<sup>15</sup> total structures. The value is far beyond a reasonable limit due to calculation time. The average program performance is about 10-100 billion structures per day with standard desktop processor. Feedback is very welcome. </p>
+    </div>
+  </div>
+</div>
+<br>
+
+
 <div id="introduction" class="container">
   <h1>Introduction</h1>
   <hr>
@@ -182,9 +199,23 @@ ga('require', 'pageVisibilityTracker');
             <li>Han, U., Park, W. B., Singh, S. P., Pyo, M., & Sohn, K.-S. (2018). Determination of Possible Configurations for Li<sub>0.5</sub>CoO<sub>2</sub> a Delithiated Li-Ion Battery Cathodes via DFT Calculation Coupled with a Multi-Objective Non-Dominated Sorting Genetic Algorithm (NSGA-III). Physical Chemistry Chemical Physics, 20(41), 26405–26413. <a href="http://doi.org/10.1039/C8CP05284K"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Loh, J. Y. Y., & Kherani, N. P. (2018). Photodegradation Activity of Sputtered Indium Oxide and Suboxide Thin Films on Rhodamine-B Dye. The Journal of Physical Chemistry C, 122(42), 24120–24128. <a href="http://doi.org/10.1021/acs.jpcc.8b07126"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Naveen, N., Park, W. B., Singh, S. P., Han, S. C., Ahn, D., Sohn, K.-S., & Pyo, M. (2018). KCrS<sub>2</sub> Cathode with Considerable Cyclability and High Rate Performance: The First K + Stoichiometric Layered Compound for Potassium-Ion Batteries. Small, 14(49), 1803495. <a href="http://doi.org/10.1002/smll.201803495"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-            <li>Kim, N., Perry, N. H., & Ertekin, E. (2018). Atomic Modeling and Electronic Structure of Mixed Ionic-Electronic Conductor SrTi<sub>1−x</sub>Fe<sub>x</sub>O<sub>3−x/2+δ</sub> Considered as a Mixture of SrTiO<sub>3</sub> and Sr<sub>2</sub>Fe<sub>2</sub>O<sub>5</sub>. Chemistry of Materials, acs.chemmater.8b04284. <a href="http://doi.org/10.1021/acs.chemmater.8b04284"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Kim, N., Perry, N. H., & Ertekin, E. (2018). Atomic Modeling and Electronic Structure of Mixed Ionic-Electronic Conductor SrTi<sub>1−x</sub>Fe<sub>x</sub>O<sub>3−x/2+δ</sub> Considered as a Mixture of SrTiO<sub>3</sub> and Sr<sub>2</sub>Fe<sub>2</sub>O<sub>5</sub>. Chemistry of Materials, 31(1), 233–243. <a href="http://doi.org/10.1021/acs.chemmater.8b04284"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Saleev, V. A., & Shipilova, A. V. (2018). Ab initio modeling of band gaps of cesium lead halide perovskites depending on the dopant amount. Journal of Physics: Conference Series, 1096, 012115. <a href="http://doi.org/10.1088/1742-6596/1096/1/012115"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Fischer, M. (2018). Local Environment and Dynamic Behavior of Fluoride Anions in Silicogermanate Zeolites: A Computational Study of the AST Framework. The Journal of Physical Chemistry C, acs.jpcc.8b10770. <a href="http://doi.org/10.1021/acs.jpcc.8b10770"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <a data-toggle="collapse" href="#collapse2019">
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">1</span></h4>
+        </a>
+      </div>
+      <div id="collapse2019" class="panel-collapse collapse">
+        <div class="panel-body">
+          <ul class="list-papers">
+            <li>Son, S., Newton, A. G., Jo, K., Lee, J., & Kideok, D. (2019). Manganese speciation in Mn-rich CaCO<sub>3</sub> : a density functional theory study. Geochimica et Cosmochimica Acta. <a href="http://doi.org/10.1016/j.gca.2019.01.011"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
           </ul>
         </div>
       </div>
@@ -275,7 +306,7 @@ ga('require', 'pageVisibilityTracker');
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>Copyright © Kirill Okhotnikov. All rights reserved. 2018</p>
+        <p>Copyright © Kirill Okhotnikov. All rights reserved. 2019</p>
       </div>
     </div>
   </div>
