--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2018">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2018<span class="badge badge-success pull-right">14</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2018<span class="badge badge-success pull-right">13</span></h4>
         </a>
       </div>
       <div id="collapse2018" class="panel-collapse collapse">
@@ -201,7 +201,6 @@ ga('require', 'pageVisibilityTracker');
             <li>Naveen, N., Park, W. B., Singh, S. P., Han, S. C., Ahn, D., Sohn, K.-S., & Pyo, M. (2018). KCrS<sub>2</sub> Cathode with Considerable Cyclability and High Rate Performance: The First K + Stoichiometric Layered Compound for Potassium-Ion Batteries. Small, 14(49), 1803495. <a href="http://doi.org/10.1002/smll.201803495"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Kim, N., Perry, N. H., & Ertekin, E. (2018). Atomic Modeling and Electronic Structure of Mixed Ionic-Electronic Conductor SrTi<sub>1−x</sub>Fe<sub>x</sub>O<sub>3−x/2+δ</sub> Considered as a Mixture of SrTiO<sub>3</sub> and Sr<sub>2</sub>Fe<sub>2</sub>O<sub>5</sub>. Chemistry of Materials, 31(1), 233–243. <a href="http://doi.org/10.1021/acs.chemmater.8b04284"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Saleev, V. A., & Shipilova, A. V. (2018). Ab initio modeling of band gaps of cesium lead halide perovskites depending on the dopant amount. Journal of Physics: Conference Series, 1096, 012115. <a href="http://doi.org/10.1088/1742-6596/1096/1/012115"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-            <li>Fischer, M. (2018). Local Environment and Dynamic Behavior of Fluoride Anions in Silicogermanate Zeolites: A Computational Study of the AST Framework. The Journal of Physical Chemistry C, acs.jpcc.8b10770. <a href="http://doi.org/10.1021/acs.jpcc.8b10770"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
           </ul>
         </div>
       </div>
@@ -209,13 +208,15 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2019">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">1</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">3</span></h4>
         </a>
       </div>
       <div id="collapse2019" class="panel-collapse collapse">
         <div class="panel-body">
           <ul class="list-papers">
-            <li>Son, S., Newton, A. G., Jo, K., Lee, J., & Kideok, D. (2019). Manganese speciation in Mn-rich CaCO<sub>3</sub> : a density functional theory study. Geochimica et Cosmochimica Acta. <a href="http://doi.org/10.1016/j.gca.2019.01.011"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Fischer, M. (2019). Local Environment and Dynamic Behavior of Fluoride Anions in Silicogermanate Zeolites: A Computational Study of the AST Framework. The Journal of Physical Chemistry C, 123(3), 1852–1865. <a href="http://doi.org/10.1021/acs.jpcc.8b10770"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>  
+            <li>Son, S., Newton, A. G., Jo, K., Lee, J., & Kideok, D. (2019). Manganese speciation in Mn-rich CaCO<sub>3</sub> : a density functional theory study. Geochimica et Cosmochimica Acta, 248, 231–241. <a href="http://doi.org/10.1016/j.gca.2019.01.011"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Alvarado, J., Schroeder, M. A., Pollard, T. P., Wang, X., Lee, J. Z., Zhang, M., … Xu, K. (2019). Bisalt Ether Electrolytes: A Pathway Towards Lithium Metal Batteries with Ni-rich Cathodes. Energy & Environmental Science, 0–24.  <a href="https://doi.org/10.1039/C8EE02601G"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>  
           </ul>
         </div>
       </div>
