--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@ ga('require', 'pageVisibilityTracker');
   <hr>
   <div class="row">
     <div class="text-right col-xs-4 col-sm-3 col-md-2 col-xl-1">
+    <h4><b>09-02-2019</b></h4>
+    </div>
+    <div class="text-left col-xs-8 col-sm-9 col-md-10 col-xl-11">
+    <h4> Microsoft Windows support (experimental). </h4> <p>I would like to announce an Microsoft Windows platform support. You can download the binary below. An output structures packing is not supported(-a option). The binary tested on Windows 7 and Windows 10. </p>
+    </div>
+  </div>   
+  <div class="row">
+    <div class="text-right col-xs-4 col-sm-3 col-md-2 col-xl-1">
     <h4><b>24-01-2019</b></h4>
     </div>
     <div class="text-left col-xs-8 col-sm-9 col-md-10 col-xl-11">
@@ -241,6 +249,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="text-center col-sm-6">
        <a class="btn btn-outline btn-lg" href="exe/supercell-linux.tar.gz" role="button"> <img src="images/Linux64x64.png" alt="Linux"> <br>Linux 64bit</a>
        <a class="btn btn-outline btn-lg" href="exe/supercell-osx.tar.gz" role="button"> <img src="images/mac64x64.png" alt="MacOS"> <br>OSX</a>
+       <a class="btn btn-outline btn-lg" href="exe/supercell-windows.zip" role="button"> <img src="images/Windows64x64.png" alt="Windows"> <br>Windows x64</a>
     </div>
     <div class="text-center col-sm-6">
       <a class="btn btn-outline btn-lg" href="https://github.com/orex/supercell" role="button"> <img src="images/github64x64.png" alt="source code"><br>GitHub</a></div>
