--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2019">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">3</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">5</span></h4>
         </a>
       </div>
       <div id="collapse2019" class="panel-collapse collapse">
@@ -224,7 +224,9 @@ ga('require', 'pageVisibilityTracker');
           <ul class="list-papers">
             <li>Fischer, M. (2019). Local Environment and Dynamic Behavior of Fluoride Anions in Silicogermanate Zeolites: A Computational Study of the AST Framework. The Journal of Physical Chemistry C, 123(3), 1852–1865. <a href="http://doi.org/10.1021/acs.jpcc.8b10770"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>  
             <li>Son, S., Newton, A. G., Jo, K., Lee, J., & Kideok, D. (2019). Manganese speciation in Mn-rich CaCO<sub>3</sub> : a density functional theory study. Geochimica et Cosmochimica Acta, 248, 231–241. <a href="http://doi.org/10.1016/j.gca.2019.01.011"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-            <li>Alvarado, J., Schroeder, M. A., Pollard, T. P., Wang, X., Lee, J. Z., Zhang, M., … Xu, K. (2019). Bisalt Ether Electrolytes: A Pathway Towards Lithium Metal Batteries with Ni-rich Cathodes. Energy & Environmental Science, 0–24.  <a href="https://doi.org/10.1039/C8EE02601G"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>  
+            <li>Alvarado, J., Schroeder, M. A., Pollard, T. P., Wang, X., Lee, J. Z., Zhang, M., … Xu, K. (2019). Bisalt Ether Electrolytes: A Pathway Towards Lithium Metal Batteries with Ni-rich Cathodes. Energy & Environmental Science, 0–24. <a href="https://doi.org/10.1039/C8EE02601G"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Zolotarev, P., Nekrasova, N., Golov, A., & Eremin, R. (2019). A combined DFT/topological analysis approach for modeling disordered solid electrolytes. EPJ Web of Conferences, 201, 02005. <a href="http://doi.org/10.1051/epjconf/201920102005"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li> 
+            <li>Zolotarev, P., & Eremin, R. (2019). Comparative analysis of DFT-vdW vs. Coulomb energies for configurational space of layered cathode material at different delithiation levels. EPJ Web of Conferences, 201, 02004. <a href="http://doi.org/10.1051/epjconf/201920102004"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li> 
           </ul>
         </div>
       </div>
