--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2019">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">6</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">7</span></h4>
         </a>
       </div>
       <div id="collapse2019" class="panel-collapse collapse">
@@ -226,7 +226,8 @@ ga('require', 'pageVisibilityTracker');
             <li>Son, S., Newton, A. G., Jo, K., Lee, J., & Kideok, D. (2019). Manganese speciation in Mn-rich CaCO<sub>3</sub> : a density functional theory study. Geochimica et Cosmochimica Acta, 248, 231–241. <a href="http://doi.org/10.1016/j.gca.2019.01.011"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Alvarado, J., Schroeder, M. A., Pollard, T. P., Wang, X., Lee, J. Z., Zhang, M., … Xu, K. (2019). Bisalt Ether Electrolytes: A Pathway Towards Lithium Metal Batteries with Ni-rich Cathodes. Energy & Environmental Science, 0–24. <a href="https://doi.org/10.1039/C8EE02601G"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Zolotarev, P., Nekrasova, N., Golov, A., & Eremin, R. (2019). A combined DFT/topological analysis approach for modeling disordered solid electrolytes. EPJ Web of Conferences, 201, 02005. <a href="http://doi.org/10.1051/epjconf/201920102005"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li> 
-            <li>Zolotarev, P., & Eremin, R. (2019). Comparative analysis of DFT-vdW vs. Coulomb energies for configurational space of layered cathode material at different delithiation levels. EPJ Web of Conferences, 201, 02004. <a href="http://doi.org/10.1051/epjconf/201920102004"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li> 
+            <li>Zolotarev, P., & Eremin, R. (2019). Comparative analysis of DFT-vdW vs. Coulomb energies for configurational space of layered cathode material at different delithiation levels. EPJ Web of Conferences, 201, 02004. <a href="http://doi.org/10.1051/epjconf/201920102004"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Klar, P. B., Etxebarria, I., & Madariaga, G. (2019). Characterizing modulated structures with first-principles calculations: a unified superspace scheme of ordering in mullite. Acta Crystallographica Section A Foundations and Advances, 75(2), 1–13. <a href="http://doi.org/10.1107/S2053273319000846"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
           </ul>
         </div>
       </div>
