--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ ga('require', 'pageVisibilityTracker');
     <h4><b>09-02-2019</b></h4>
     </div>
     <div class="text-left col-xs-8 col-sm-9 col-md-10 col-xl-11">
-    <h4> Microsoft Windows support (experimental). </h4> <p>I would like to announce an Microsoft Windows platform support. You can download the binary below. An output structures packing is not supported(-a option). The binary tested on Windows 7 and Windows 10. </p>
+    <h4> Microsoft Windows support (experimental). </h4> <p>I would like to announce a Microsoft Windows platform support. You can download the binary below. An output structures packing is not supported(-a option). The binary tested on Windows 7 and Windows 10. </p>
     </div>
   </div>   
   <div class="row">
