--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2019">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">7</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">8</span></h4>
         </a>
       </div>
       <div id="collapse2019" class="panel-collapse collapse">
@@ -224,10 +224,11 @@ ga('require', 'pageVisibilityTracker');
             <li>Kim, N., Perry, N. H., & Ertekin, E. (2019). Atomic Modeling and Electronic Structure of Mixed Ionic-Electronic Conductor SrTi<sub>1−x</sub>Fe<sub>x</sub>O<sub>3−x/2+δ</sub> Considered as a Mixture of SrTiO<sub>3</sub> and Sr<sub>2</sub>Fe<sub>2</sub>O<sub>5</sub>. Chemistry of Materials, 31(1), 233–243. <a href="http://doi.org/10.1021/acs.chemmater.8b04284"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>		  
             <li>Fischer, M. (2019). Local Environment and Dynamic Behavior of Fluoride Anions in Silicogermanate Zeolites: A Computational Study of the AST Framework. The Journal of Physical Chemistry C, 123(3), 1852–1865. <a href="http://doi.org/10.1021/acs.jpcc.8b10770"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>  
             <li>Son, S., Newton, A. G., Jo, K., Lee, J., & Kideok, D. (2019). Manganese speciation in Mn-rich CaCO<sub>3</sub> : a density functional theory study. Geochimica et Cosmochimica Acta, 248, 231–241. <a href="http://doi.org/10.1016/j.gca.2019.01.011"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-            <li>Alvarado, J., Schroeder, M. A., Pollard, T. P., Wang, X., Lee, J. Z., Zhang, M., … Xu, K. (2019). Bisalt Ether Electrolytes: A Pathway Towards Lithium Metal Batteries with Ni-rich Cathodes. Energy & Environmental Science, 0–24. <a href="https://doi.org/10.1039/C8EE02601G"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Alvarado, J., Schroeder, M. A., Pollard, T. P., Wang, X., Lee, J. Z., Zhang, M., … Xu, K. (2019). Bisalt ether electrolytes: a pathway towards lithium metal batteries with Ni-rich cathodes. Energy & Environmental Science, 12(2), 780–794. <a href="https://doi.org/10.1039/C8EE02601G"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Zolotarev, P., Nekrasova, N., Golov, A., & Eremin, R. (2019). A combined DFT/topological analysis approach for modeling disordered solid electrolytes. EPJ Web of Conferences, 201, 02005. <a href="http://doi.org/10.1051/epjconf/201920102005"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li> 
             <li>Zolotarev, P., & Eremin, R. (2019). Comparative analysis of DFT-vdW vs. Coulomb energies for configurational space of layered cathode material at different delithiation levels. EPJ Web of Conferences, 201, 02004. <a href="http://doi.org/10.1051/epjconf/201920102004"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-            <li>Klar, P. B., Etxebarria, I., & Madariaga, G. (2019). Characterizing modulated structures with first-principles calculations: a unified superspace scheme of ordering in mullite. Acta Crystallographica Section A Foundations and Advances, 75(2), 1–13. <a href="http://doi.org/10.1107/S2053273319000846"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Klar, P. B., Etxebarria, I., & Madariaga, G. (2019). Characterizing modulated structures with first-principles calculations: a unified superspace scheme of ordering in mullite. Acta Crystallographica Section A Foundations and Advances, 75(2), 260–272. <a href="http://doi.org/10.1107/S2053273319000846"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Watanabe, E., Zhao, W., Sugahara, A., Mortemard de Boisse, B., Lander, L., Asakura, D., … Yamada, A. (2019). Redox-Driven Spin Transition in a Layered Battery Cathode Material. Chemistry of Materials, acs.chemmater.8b04775. <a href="http://doi.org/10.1021/acs.chemmater.8b04775"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
           </ul>
         </div>
       </div>
