--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2019">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">8</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">9</span></h4>
         </a>
       </div>
       <div id="collapse2019" class="panel-collapse collapse">
@@ -229,6 +229,7 @@ ga('require', 'pageVisibilityTracker');
             <li>Zolotarev, P., & Eremin, R. (2019). Comparative analysis of DFT-vdW vs. Coulomb energies for configurational space of layered cathode material at different delithiation levels. EPJ Web of Conferences, 201, 02004. <a href="http://doi.org/10.1051/epjconf/201920102004"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Klar, P. B., Etxebarria, I., & Madariaga, G. (2019). Characterizing modulated structures with first-principles calculations: a unified superspace scheme of ordering in mullite. Acta Crystallographica Section A Foundations and Advances, 75(2), 260–272. <a href="http://doi.org/10.1107/S2053273319000846"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Watanabe, E., Zhao, W., Sugahara, A., Mortemard de Boisse, B., Lander, L., Asakura, D., … Yamada, A. (2019). Redox-Driven Spin Transition in a Layered Battery Cathode Material. Chemistry of Materials, acs.chemmater.8b04775. <a href="http://doi.org/10.1021/acs.chemmater.8b04775"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Loganathan, N., Bowers, G. M., Ngouana Wakou, B. F., Kalinichev, A. G., Kirkpatrick, R. james, & Yazaydin, O. (2019). Understanding Methane/Carbon Dioxide Partitioning in Clay Nano- and Meso-Pores with Constant Reservoir Composition Molecular Dynamics Modeling. Physical Chemistry Chemical Physics. <a href="http://doi.org/10.1039/C9CP00851A"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>            
           </ul>
         </div>
       </div>
