--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2019">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">11</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">12</span></h4>
         </a>
       </div>
       <div id="collapse2019" class="panel-collapse collapse">
@@ -231,7 +231,8 @@ ga('require', 'pageVisibilityTracker');
             <li>Watanabe, E., Zhao, W., Sugahara, A., Mortemard de Boisse, B., Lander, L., Asakura, D., … Yamada, A. (2019). Redox-Driven Spin Transition in a Layered Battery Cathode Material. Chemistry of Materials, 31(7), 2358–2365. <a href="http://doi.org/10.1021/acs.chemmater.8b04775"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Loganathan, N., Bowers, G. M., Ngouana Wakou, B. F., Kalinichev, A. G., Kirkpatrick, R. james, & Yazaydin, A. O. (2019). Understanding methane/carbon dioxide partitioning in clay nano- and meso-pores with constant reservoir composition molecular dynamics modeling. Physical Chemistry Chemical Physics, 21(13), 6917–6924. <a href="http://doi.org/10.1039/C9CP00851A"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Zhang, F., Wang, H.-W., Tominaga, K., Hayashi, M., & Sasaki, T. (2019). THz Fingerprints of Short-Range Correlations of Disordered Atoms in Diflunisal. The Journal of Physical Chemistry A, acs.jpca.9b00580. <a href="http://doi.org/10.1021/acs.jpca.9b00580"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-            <li>Li, W., Asl, H. Y., Xie, Q., & Manthiram, A. (2019). Collapse of LiNi<sub>1-x-y</sub>Co<sub>x</sub>Mn<sub>y</sub>O<sub>2</sub> Lattice at Deep Charge Irrespective of Nickel Content in Lithium-Ion Batteries. Journal of the American Chemical Society, 141(13), 5097–5101. <a href="http://doi.org/10.1021/jacs.8b13798"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>            
+            <li>Li, W., Asl, H. Y., Xie, Q., & Manthiram, A. (2019). Collapse of LiNi<sub>1-x-y</sub>Co<sub>x</sub>Mn<sub>y</sub>O<sub>2</sub> Lattice at Deep Charge Irrespective of Nickel Content in Lithium-Ion Batteries. Journal of the American Chemical Society, 141(13), 5097–5101. <a href="http://doi.org/10.1021/jacs.8b13798"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Dieb, T. M., Ju, S., Shiomi, J., & Tsuda, K. (2019). Monte Carlo tree search for materials design and discovery. MRS Communications, 1–5. <a href="http://doi.org/10.1557/mrc.2019.40"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>             
           </ul>
         </div>
       </div>
