--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@ ga('require', 'pageVisibilityTracker');
   <hr>
   <div class="row">
     <div class="text-right col-xs-4 col-sm-3 col-md-2 col-xl-1">
+    <h4><b>23-05-2019</b></h4>
+    </div>
+    <div class="text-left col-xs-8 col-sm-9 col-md-10 col-xl-11">
+    <h4> Supercell v1.2 (perfromance increase). </h4> <p>The new version of <i>supercell</i> program is around 4 times faster, than the pervious one! </p>
+    </div>
+  </div>   	
+  <div class="row">
+    <div class="text-right col-xs-4 col-sm-3 col-md-2 col-xl-1">
     <h4><b>09-02-2019</b></h4>
     </div>
     <div class="text-left col-xs-8 col-sm-9 col-md-10 col-xl-11">
