--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2019">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">13</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">14</span></h4>
         </a>
       </div>
       <div id="collapse2019" class="panel-collapse collapse">
@@ -242,6 +242,7 @@ ga('require', 'pageVisibilityTracker');
             <li>Li, W., Asl, H. Y., Xie, Q., & Manthiram, A. (2019). Collapse of LiNi<sub>1-x-y</sub>Co<sub>x</sub>Mn<sub>y</sub>O<sub>2</sub> Lattice at Deep Charge Irrespective of Nickel Content in Lithium-Ion Batteries. Journal of the American Chemical Society, 141(13), 5097–5101. <a href="http://doi.org/10.1021/jacs.8b13798"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Dieb, T. M., Ju, S., Shiomi, J., & Tsuda, K. (2019). Monte Carlo tree search for materials design and discovery. MRS Communications, 1–5. <a href="http://doi.org/10.1557/mrc.2019.40"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>De Lile, J. R., Lee, S. Y., Kim, H.-J., Pak, C., & Lee, S. G. (2019). First-principles study of the effect of compressive strain on oxygen adsorption in Pd/Ni/Cu-alloy-core@Pd/Ir-alloy-shell catalysts. New Journal of Chemistry. <a href="http://doi.org/10.1039/C9NJ01705D"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Moradabadi, A., & Kaghazchi, P. (2019). Defect chemistry in cubic Li<sub>6.25</sub>Al<sub>0.25</sub>La<sub>3</sub>Zr<sub>2</sub>O<sub>12</sub> solid electrolyte: A density functional theory study. Solid State Ionics, 338, 74–79. <a href="https://doi.org/10.1016/j.ssi.2019.04.023"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
           </ul>
         </div>
       </div>
